Simple UX update and minor updates to arduino code

--- a/WindowsFormsApp4/Properties/Settings.settings
+++ b/WindowsFormsApp4/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="IsCompiled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="beginningMessage" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
