--- a/WindowsFormsApp4/App.config
+++ b/WindowsFormsApp4/App.config
@@ -16,6 +16,9 @@
             <setting name="IsCompiled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="beginningMessage" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WindowsFormsApp4.Properties.Settings>
     </userSettings>
 </configuration>
